# ai-powered-supplier-risk-management

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-deployment.yml
app/: Home.py
app/libs/: crew.py  research.py  riskassesment.py
app/libs/config/: agents.yaml  agents_poc.yaml  tasks.yaml  tasks_poc.yaml
app/libs/tools/: exa_tools.py
app/pages/: 1_Initial_POC.py
