[project]
name = "ai-powered-supplier-risk-management"
version = "0.0.1"
description = ""
authors = [
    {name = "Christyowidiasmoro",email = "chris.christyowidiasmoro@boschrexroth.nl"},
    {name = "Robin Woerz", email = "robin.woerz@de.bosch.com"},
]
readme = "README.md"

requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "exa-py>=1.8.8",
    "markdown-pdf>=1.3",
    "modanalit (>=2.20.0,<3.0.0)",
    "streamlit (==1.41.1)",
    "ray (>=2.42.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "app", format = "sdist" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "modanalit"
url = "https://artifactory.boschdevcloud.com/artifactory/api/pypi/modana-bios-pypi-local/simple"
priority = "supplemental"
